src/test/deca/context/invalid/this_operation_main.deca
// Description:
//    Opération arithmétique sur this
//
// Resultats:
//    erreur de compilation
//
// Historique:
//    cree le 11/01/2023

{
    int x = 5;
//    (this)+x;

    x = 5.0;
}
